# geometry

./: state.txt
example/: 07_c.cpp
example/with_external_libs/lib/: CMakeLists.txt
include/boost/geometry/algorithms/detail/buffer/: turn_in_piece_visitor.hpp
include/boost/geometry/algorithms/detail/debug/: debug_print_turns.hpp
include/boost/geometry/algorithms/detail/overlay/: get_turn_info_local_svg.hpp
include/boost/geometry/arithmetic/: general_form_predicates.hpp
include/boost/geometry/strategies/agnostic/: point_in_poly_winding.hpp
include/boost/geometry/strategies/cartesian/: point_in_poly_winding.hpp  side_rounded_input.hpp  turn_in_ring_winding.hpp
include/boost/geometry/util/: precise_cartesian_intersection.hpp
test/algorithms/buffer/: buffer_linestring.cpp
test/robustness/overlay/strategies/: Jamfile  intersection_points_and_sides.cpp
